kubernetes/apps/external-secrets/networkpolicy.yaml
---
# Allow DNS, API server, and HTTPS to 1Password API.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-secrets
  namespace: external-secrets
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
    - ports:
        - protocol: TCP
          port: 443
